<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/map_view_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_map_view"
        android:title="@string/bottom_navigation_menu_map_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/list_view_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_list_view"
        android:title="@string/bottom_navigation_menu_list_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/workmates_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_workmate"
        android:title="@string/bottom_navigation_menu_Workmates"
        app:showAsAction="ifRoom" />
</menu>