<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="@dimen/nav_header_height"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/drawer_background_iv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/drawer_background"
        android:scaleType="centerCrop"
        android:src="@drawable/background_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/drawer_avatar_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/drawer_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/john_smith"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/drawer_avatar_iv"
        app:layout_constraintTop_toTopOf="@+id/drawer_avatar_iv" />

    <TextView
        android:id="@+id/drawer_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/jsmith_1337_gmail_com"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/drawer_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/drawer_name_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>