<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_fragment_coordinator_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_fragment_background_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/background_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/login_fragment_logo_iv"
            android:layout_width="@dimen/login_fragment_logo_iv_size"
            android:layout_height="@dimen/login_fragment_logo_iv_size"
            android:layout_margin="@dimen/login_fragment_logo_iv_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo"
            app:tint="@color/white"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/login_fragment_app_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/login_fragment_app_name_tv_text_size"
            app:layout_constraintTop_toBottomOf="@+id/login_fragment_logo_iv" />

        <TextView
            android:id="@+id/login_fragment_app_tag_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_tag"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/login_fragment_app_tag_tv_text_size"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/login_fragment_app_name_tv" />

        <Button
            android:id="@+id/login_fragment_firebase_auth_twitter_btn"
            android:layout_width="@dimen/login_fragment_firebase_btn_width"
            android:layout_height="@dimen/login_fragment_firebase_btn_height"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in_with_twitter"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/login_fragment_firebase_btn_text_size"
            app:backgroundTint="@color/twitter_button"
            app:icon="@drawable/ic_twitter_logo"
            app:iconSize="@dimen/login_fragment_firebase_btn_icon_size"
            android:alpha="0"
            app:layout_constraintBottom_toTopOf="@+id/login_fragment_firebase_auth_facebook_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login_fragment_firebase_auth_facebook_btn"
            android:layout_width="@dimen/login_fragment_firebase_btn_width"
            android:layout_height="@dimen/login_fragment_firebase_btn_height"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in_with_facebook"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/login_fragment_firebase_btn_text_size"
            app:backgroundTint="@color/facebook_button"
            app:icon="@drawable/ic_facebook_logo"
            app:iconSize="@dimen/login_fragment_firebase_btn_icon_size"
            android:alpha="0"
            app:layout_constraintBottom_toTopOf="@+id/login_fragment_firebase_auth_google_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login_fragment_firebase_auth_google_btn"
            android:layout_width="@dimen/login_fragment_firebase_btn_width"
            android:layout_height="@dimen/login_fragment_firebase_btn_height"
            app:backgroundTint="@color/google_button"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in_with_google"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/login_fragment_firebase_btn_text_size"
            app:icon="@drawable/ic_google_logo"
            app:iconSize="@dimen/login_fragment_firebase_btn_icon_size"
            android:alpha="0"
            app:layout_constraintBottom_toTopOf="@id/login_fragment_firebase_auth_email_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login_fragment_firebase_auth_email_btn"
            android:layout_width="@dimen/login_fragment_firebase_btn_width"
            android:layout_height="@dimen/login_fragment_firebase_btn_height"
            android:layout_marginBottom="@dimen/login_fragment_firebase_auth_email_btn_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_in_with_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/login_fragment_firebase_btn_text_size"
            app:backgroundTint="@color/clear_orange"
            app:icon="@drawable/ic_mail_logo"
            app:iconSize="@dimen/login_fragment_firebase_btn_icon_size"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_fragment_facebook_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/login_fragment_firebase_auth_google_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>